# tldr-tube

./: .env.example  .gitignore  CHANGELOG_EXPORT.md  CLAUDE.md  DATABASE_AND_SEARCH_FAQ.md  DATABASE_MIGRATION_GUIDE.md  EXPORT_EXAMPLE.md  EXPORT_GUIDE.md  KEYFRAME_EXTRACTION.md  MULTI_LLM_DESIGN.md  MULTI_LLM_IMPLEMENTATION.md  NOTE_GENERATION.md  RAG_DESIGN.md  README.md  SEARCH_FEATURE_SUMMARY.md  SEARCH_ROADMAP.md  SEMANTIC_SEARCH_IMPLEMENTATION.md  TODO.md  app.py  embedding_model_comparison.md  mcp_server.py  pyproject.toml  requirements.txt  run.sh  run_mcp.sh  test_export.py
db/: __init__.py  models.py  operations.py  session.py
pipeline/: __init__.py  config.py  embeddings.py  export.py  keyframe_notes.py  keyframes.py  llm_client.py  metadata.py  processor.py  prompts.py  rag.py  search.py  summarize.py  transcript.py  utils.py  whisper.py  worker.py
scripts/: analyze_content_length.py  backfill_embeddings.py  migrate_add_embeddings.py  test_keyframes.py  test_notes.py  test_rag.py
