[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr-tube"
version = "0.1.0"
description = "Timestamp-anchored video summaries powered by LLMs"
requires-python = ">=3.11"

[project.scripts]
tldr-tube-mcp = "mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "db*"]
