[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr-tube"
version = "0.1.0"
description = "Timestamp-anchored video summaries powered by LLMs"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "streamlit>=1.37.0",
    # YouTube transcript fetching
    "youtube-transcript-api>=0.6.0",
    # LLM APIs
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    # Video/audio processing
    "yt-dlp>=2024.0.0",
    # Keyframe extraction
    "imagehash>=4.3.0",
    "scikit-image>=0.22.0",
    "opencv-python-headless>=4.9.0",
    # Environment variables
    "python-dotenv>=1.0.0",
    # Database ORM
    "sqlalchemy>=2.0.0",
    # Semantic search
    "FlagEmbedding==1.3.5",
    "transformers>=4.36.0,<4.50.0",
    "scikit-learn==1.8.0",
    # MCP server
    "mcp>=1.0.0",
]

[project.optional-dependencies]
asr = [
    # ASR fallback (Apple Silicon only)
    "mlx-whisper>=0.3.0",
]

[project.scripts]
tldr-tube-mcp = "mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "db*"]
